objects/CS_Specialization__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This contains list of all Specializations and Prerequisites with respective to their Offering type.</description>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>DisplayOrder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <label>Offering Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prerequisite__c</fullName>
        <label>Prerequisite Specialization</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>CS Specialization</label>
</CustomObject>